Task 12 – Address static analysis findings by removing unused variables, dead code, and deprecated Integer constructors